# validador-de-cart-o

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: e2e.yml  lint.yml  playwright.yml  python-package.yml  release-drafter.yml  release.yml
docs/: api.md  examples.md  usage.md
examples/: README.md  fastapi_app.py
examples/scripts/: curl_examples.sh  demo_lib.py  run_fastapi.sh
examples/web_ui/: README.md
src/validador_bandeiras/: __init__.py  cli.py  detector.py  patterns.py
tests/: test_detector.py
tests/e2e/: test_web_ui.py
